# sockep

./: CMakeLists.txt
examples/: unixdgram_client.cpp  unixdgram_server.cpp  unixstream_client.cpp  unixstream_server.cpp
include/sockep/: SockEPFactory.h
lib/: CMakeLists.txt
src/: SockEPFactory.cpp
src/client/: ClientSockEP.cpp  UdpClientSockEP.cpp  UdpClientSockEP.h
test/: unixdgram_test.cpp  unixstream_test.cpp
